--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -16,11 +16,11 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Sample Header:<br>Special Thanks</h2>
-            <p class="lead">Sample Text</p>
+            <h2 class="section-heading">Top Kid's Release:
+            <p class="lead">Diary of a Wimpy Kid The Getaway</p>
           </div>
           <div class="col-lg-5 mr-auto">
-            <img class="img-fluid" src="/assets/ipad.png" alt="">
+            <img class="img-fluid" src="/assets/KidRelease.jpg" alt="">
           </div>
         </div>
 
@@ -36,11 +36,11 @@
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Sample Header<br>by yours truly</h2>
-            <p class="lead">Sample Text</p>
+            <h2 class="section-heading">Best Selling Book:
+            <p class="lead">Harry Potter and the Cursed Child, Parts 1 & 2</p>
           </div>
           <div class="col-lg-5 ml-auto order-lg-1">
-            <img class="img-fluid" src="/assets/dog.png" alt="">
+            <img class="img-fluid" src="/assets/BestRelease.jpg" alt="">
           </div>
         </div>
 
