--- a/BookStore/app/views/layouts/application.html.erb
+++ b/BookStore/app/views/layouts/application.html.erb
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BookStore</title>
+<style>
+.container {
+    position: relative;
+}
+
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+}
+</style>  
+    <title>BartsBookstore</title>
     <%= csrf_meta_tags %>
+    <link href=/app/assets/stylesheets/bootstrap.min.css" rel="stylesheet">
+
+
+      <%= stylesheet_link_tag "bootstrap.min.css" %>
+      <%= stylesheet_link_tag "landing-page.css" %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+  <div class="topright">
+     <% if signed_in? %>
+      Signed in as: <%= current_user.email %>
+      <%= button_to 'Sign out', sign_out_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign in', sign_in_path %>
+    <% end %>
+  </div>
+<div class="center">
+    <div id="flash">
+      <% flash.each do |key, value| %>
+        <div class="flash <%= key %>"><%= value %></div>
+      <% end %>
+    </div>
     <%= yield %>
-  </body>
-</html>
